--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,67 @@
 .App {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+
+  justify-content: center;
   text-align: center;
+}
+
+.app__column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  justify-content: center;
+  text-align: center;
+  max-width: 550px;
+}
+
+.app__header {
+  width: 250px;
+  text-align: center;
+}
+
+
+.app__button {
+  padding: 10px;
+  margin: 10px;
+
+  background-color: azure;
+
+  border-color: skyblue;
+  border-radius: 10px;
+
+}
+
+.app__wrapper_button {
+
+  display: flex;
+  flex-direction: column;
+
+  width: 150px;
+}
+
+.app__box {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 50px;
+  border-radius: 50px;
+  padding: 10px 50px;
+  background-color: lavender;
+  border: 1px solid rebeccapurple;
+
+  min-width: 120px;
+  min-height: 150px;
+}
+
+.app__container {
+
+  font-size: 25px;
+  font-weight: 600;
+  padding: 50px 0;
 }
