--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,47 @@
+* {
+  box-sizing: content-box;
+}
+
+body {
+  background: #444444;
+  color: white;
+  font-family: Arial, sans-serif;
+}
+
+html,
+body,
+#root {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#slider-container {
+  display: flex;
+}
+
+#slider-container .counter {
+  margin-left: 0.5rem;
+  width: 3rem;
+  font-size: large;
+}
+
+.bubble {
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  z-index: -1;
+  opacity: 0.9;
+}
+
+
 .App {
   text-align: center;
 }
