--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,13 @@ code {
     monospace;
 }
 
+.heading {
+  margin: 50px;
+  padding: 0;
+
+  min-height: 150px;
+}
+
 .nav {
   display: flex;
   justify-content: space-around;
